tests/ui/consts/min_const_fn/bad_const_fn_body_ice.stderr
error[E0015]: cannot call non-const function `non_const` in constant functions
  --> $DIR/bad_const_fn_body_ice.rs:6:5
   |
LL |     non_const()
   |     ^^^^^^^^^^^
   |
note: function `non_const` is not const
  --> $DIR/bad_const_fn_body_ice.rs:1:1
   |
LL | fn non_const() -> Vec<i32> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
